<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ic_tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account_ttf"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_5_dp"
            android:layout_toRightOf="@id/ic_tv_account"
            android:text="用户名"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="用户名"
            android:textSize="@dimen/text_size_large" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ic_tv_phone"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_ttf"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_5_dp"
            android:layout_toRightOf="@id/ic_tv_phone"
            android:text="联系电话"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_userphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="电话号码"
            android:textSize="@dimen/text_size_large" />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ic_tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tv_password_ttf"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_5_dp"
            android:layout_toRightOf="@id/ic_tv_pwd"
            android:text="密码"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_userpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_5_dp"
            android:layout_toLeftOf="@+id/tv_ic_edit"
            android:inputType="textPassword"
            android:text="密码"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/tv_ic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/tv_edit_ttf"
            android:textSize="@dimen/text_size_large" />
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>