<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/relativ_layout_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5">

        <ImageView
            android:id="@+id/image_shop_info"
            android:layout_width="640dp"
            android:layout_height="480dp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/text_5_dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/cheese_3" />

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/relative_layout_show"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_storename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="店铺名"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tv_edit_storename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:text="@string/tv_edit_ttf"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:text="更换图片"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/text_5_dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_change_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/tv_change_image_ttf"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>
        </android.support.percent.PercentRelativeLayout>
    </android.support.percent.PercentRelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/cardview_margin"
        android:layout_weight="4"
        card_view:cardCornerRadius="@dimen/cardview_corner_radius">

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingLeft="@dimen/text_5_dp"
            android:paddingRight="@dimen/text_5_dp">

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layout_history_order"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true">

                <TextView
                    android:id="@+id/tv_ic_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/text_size_large"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_history_ttf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:layout_toRightOf="@+id/tv_ic_history"
                    android:text="历史订单:"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tv_history_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/text_5_dp"
                    android:text="@string/tv_next_ttf"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#000" />
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layout_trueanme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ic_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/text_size_large"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_account_ttf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:layout_toRightOf="@+id/tv_ic_account"
                    android:text="店主姓名:"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/info_truename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/text_5_dp"
                    android:text="Name"
                    android:textSize="@dimen/text_size_medium" />
            </android.support.percent.PercentRelativeLayout>


            <android.support.percent.PercentRelativeLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/tv_phone_ttf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:layout_toRightOf="@+id/tv_ic_phone"
                    android:text="电话号码:"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/info_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="Phone"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ic_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:text="@string/tv_password_ttf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:layout_toRightOf="@+id/tv_ic_pwd"
                    android:text="登录密码:"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/info_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/text_5_dp"
                    android:layout_toLeftOf="@+id/tv_pwd_edit"
                    android:inputType="textPassword"
                    android:maxLength="6"
                    android:text="1111111111"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:id="@+id/tv_pwd_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_5_dp"
                    android:text="@string/tv_edit_ttf"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

            </android.support.percent.PercentRelativeLayout>

            <Button
                android:id="@+id/loginout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@android:color/holo_red_light"
                android:text="退出登录"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>